force-app/main/default/objects/Int_Agreement_Provision__c/Int_Agreement_Provision__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Provision</description>
    <label>Int Agreement Provision</label>
    <nameField>
        <displayFormat>AGP-{0000000000}</displayFormat>
        <label>Agreement Provision Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Provision</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>