force-app/main/default/objects/Int_Agreement_Provision__c/fields/Agreement_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Source_System__c</fullName>
    <description>Agreement Source System</description>
    <label>Agreement Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>