force-app/main/default/objects/Int_Agreement_Provision__c/fields/Credit_Risk_Provision_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Provision_Amount__c</fullName>
    <description>Credit Risk Provision Amount</description>
    <label>Credit Risk Provision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>