force-app/main/default/objects/Int_Agreement_Provision__c/fields/Credit_Risk_Provision_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Provision_Type__c</fullName>
    <description>Credit Risk Provision Type</description>
    <label>Credit Risk Provision Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>