force-app/main/default/objects/Int_Agreement_Provision__c/fields/Provision_Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Provision_Determination_Date__c</fullName>
    <description>Provision Determination Date</description>
    <label>Provision Determination Date</label>
    <type>Date</type>
</CustomField>