force-app/main/default/objects/Int_Agreement_Provision__c/fields/Provision_Origination_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Provision_Origination_Type_Code__c</fullName>
    <description>Provision Origination Type Code</description>
    <label>Provision Origination Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>